2004-06-24  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* arch/i386/Kconfig, arch/i386/defconfig, configure.in: correctly
	handle the configure-time number of cpus.

2004-06-23  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/system.h (xnarch_thread_redirect): 
	Force regparm(0) so that we are still safe if CONFIG_REGPARM is
	enabled.

2004-06-21  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/hal/hal.c (rthal_domain_entry): Disable sync (debug)
	mode for printk().

	* nucleus/lib/fusion.c (pthread_migrate_rt): Directly use the
	nucleus-based migration service: this one works properly in all
	cases...

2004-06-21  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* configure.in, GNUmakefile.am: handle correctly the "all" and "dist"
	targets, whether or not the doc and sim directories are present in
	the source tree.

2004-06-20  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai: Export interface symbols.

2004-06-19  Philippe Gerum  <rpm@xenomai.org>

	* doc/docbook/docbook-test/xenomai.xml: Refactor the paper
	according to the latest RTAI/Xenomai evolution.

2004-06-18  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.1

2004-06-18  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade the x86 patches to 2.6r5 final. Add
	support for 2.6.7.

	* skins/rtai/syscall.c: Do not compile in unselected optional
	support.
	
	* skins/rtai/syscall.c: Properly handle calls on self task object.

	* skins/rtai/syscall.c: Only fetch objects address but do not lock
	them since the descriptor will be (re-)verified by the syscall,
	and we want the possibly pended object to be destroyable, and
	sleepers to unblock on the XNRMID condition.

	* skins/rtai/registry.c: Implement rt_registry_fetch().

2004-06-17  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Clobber *.o in RTAI_KBUILD_CLEAN.

	* skins/rtai/cond.c: Add condition variable support.

	* skins/rtai/mutex.c: Add mutex support.
